added tender pages

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,3 +15,7 @@
 @import 'pages/associationdetails';
 @import 'pages/announcements';
 @import 'pages/announcementsdetails';
+@import 'pages/tenderannouncements';
+@import 'pages/tenderdetails';
+@import 'pages/joblisting';
+@import 'pages/joblistingdetails';
