--- a/sass/pages/_associationnews.scss
+++ b/sass/pages/_associationnews.scss
@@ -609,6 +609,7 @@
 
 												@media(max-width: 991px) {
 													display: block;
+													font-size: 22px;
 												}
 											}
 										}
