--- a/sass/pages/_announcementsdetails.scss
+++ b/sass/pages/_announcementsdetails.scss
@@ -81,6 +81,17 @@
                 }
             }
         }
+        .bottom-title{
+            text-align: center;
+            margin-top: 20px;
+            h5{
+                margin-bottom: 0;
+                color: rgba(0, 0, 0, 0.60);
+                font-size: 16px;
+                font-weight: 500;
+                line-height: 16px;
+            }
+        }
         &::before{
             position: absolute;
             right: 0;
@@ -182,6 +193,19 @@
                                     font-weight: 600 !important;
                                 }
                             }
+                        }
+                    }
+                    .details-box{
+                        margin-bottom: 20px;
+                        &:last-child{
+                            margin-bottom: 0;
+                        }
+                        h5{
+                            margin-bottom: 10px;
+                            color: rgba(0, 0, 0, 0.80);
+                            font-size: 16px;
+                            font-weight: 600;
+                            line-height: 26px;
                         }
                     }
                 }
